--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title></title>
+        <title>Resume</title>
     </head>
     <body>
 
@@ -36,6 +36,11 @@
 
         <table>
             <tbody>
+                <thead>
+                    <td>s.no</td>
+                    <td>name</td>
+                    <td>id</td>
+                </thead>
                 <tr>
                     <td>1</td>
                     <td>sri</td>
