--- a/index.html
+++ b/index.html
@@ -4,56 +4,25 @@
     </head>
     <body>
 
-        <h1>
-            Hello World!!
-        </h1>
+        <h1>Srilakshmi</h1>
+        <div class="'personal-info">
+            <p>Address: Green Fields, Vaddeswaram, Andgra Pradesh
+            </p>
+            <ul>
+                <li>Email: ramisettisrilakshmi@gmail.com</li>
+                <li>LinkedIn:</li>
+                <li>Github: github/Srilakshmi4</li>
+            </ul>
 
-        <h2>
-            Hello World!!
-        </h2>
+            
+        </div>
+        <hr>
+        <div class="education-section">
+            <h2>Education</h2>
+            <h4>B.Tech Computer Science (9.66 CGPA )</h4>
 
-        <h3>
-            Hello World!!
-        </h3>
 
-        <h6>
-            Hello World!!
-        </h6>
-
-        <p>This is a paragraph</p>
-
-        <ul>
-
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
-            <li>4</li>
-            <li>5</li>
-
-        </ul>
-
-        <article>This is article</article>
-
-        <table>
-            <tbody>
-                <thead>
-                    <td>s.no</td>
-                    <td>name</td>
-                    <td>id</td>
-                </thead>
-                <tr>
-                    <td>1</td>
-                    <td>sri</td>
-                    <td>2100031879</td>
-                </tr>
-
-                <tr>
-                    <td>2</td>
-                    <td>mani</td>
-                    <td>2200032402</td>
-                </tr>
-            </tbody>
-        </table>
+        </div>
 
 
     </body>
